[package]
name = "corpusit"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "corpusit"
crate-type = ["lib"]

[dependencies]
bincode = "1.3.3"
fastrand = "1.8.0"
float-cmp = "0.9.0"
itertools = "0.10.5"
next-gen = "0.1.1"
positioned-io = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5"
scoped-tls = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tqdm = "0.4.2"


[dev-dependencies]
criterion = "0.3"