[package]
name = "corpusit-python"
version = "0.1.3"
authors = ["duxin.ac@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "corpusit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.2", features = ["extension-module"] }
numpy = "0.15"
serde = { version = "1.0.145", features = ["rc"] }
serde_json = "1.0.85"
bincode = "1.3.3"
tqdm = "0.4.2"
ndarray = "0.15.6"

[dependencies.corpusit]
version = "0.1.3"
path = "../../corpusit"

[build-dependencies]
pyo3-build-config = { git = "https://github.com/pyo3/pyo3", version = "0.17", features = ["resolve-config"] }
