[build-system]
requires = ["maturin<0.14"]
build-backend = "maturin"

[project]
name = "corpusit"
authors = [
    {email = "duxin.ac@gmail.com"},
    {name = "Xin Du"},
]
keywords = ["natural language modeling", "corpus", "skipgram"]
requires-python = ">=3.6"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/kduxin/corpusit"